# py0b

./: LICENSE  README.md  pyproject.toml
examples/: png_info.py
py0b/: __init__.py  amount.py  field.py  instance.py  stream.py  structure.py
py0b/fields/: __init__.py  bytes_field.py  integer_field.py  structure_field.py
tests/: test_amount.py  test_bytes_field.py  test_integer_field.py  test_stream.py  test_structure_field.py
